<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Dish Image -->
        <ImageView
            android:id="@+id/dishImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/dish_image_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <!-- Price -->
        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_text"
            android:padding="4dp"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dishDescriptionTextView" />

        <!-- Dish Name -->
        <TextView
            android:id="@+id/dishNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dish_name"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toStartOf="@+id/priceTextView"
            app:layout_constraintStart_toEndOf="@id/dishImageView"
            app:layout_constraintTop_toTopOf="@id/dishImageView" />

        <!-- Dish Description -->
        <TextView
            android:id="@+id/dishDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/dish_description"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/dishNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/dishNameTextView" />

        <!-- Add Button -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statusAddBtnContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/dishDescriptionTextView"
            app:layout_constraintStart_toStartOf="@+id/dishDescriptionTextView"
            app:layout_constraintTop_toBottomOf="@+id/dishDescriptionTextView">

            <TextView
                android:id="@+id/stockTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Out of Stock"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/green"
                android:letterSpacing="0"
                android:text="@string/add_btn_text"
                android:textColor="@color/white"
                android:visibility="visible"
                app:icon="@drawable/ic_add"
                app:iconGravity="textEnd"
                app:iconPadding="2dp"
                app:iconSize="16dp"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Quantity Controls -->
        <LinearLayout
            android:id="@+id/quantityControlsLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dishDescriptionTextView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/qty_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/qty_hyphen" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decreaseQuantityButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/decrease_btn_text"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.SmallComponent" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:maxLength="2"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="01" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/increaseQuantityButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/increase_btn_text"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.SmallComponent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>